--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -2,12 +2,14 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #f7f0f0;
   }
 }
 
 body {
   margin: 0;
   font-family: system-ui, sans-serif;
-  background-color:#f5f5f5;
+  background-color:#f7efef;
 }
+
+;
